--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "bcrypt": "^0.8.2",
     "body-parser": "^1.12.3",
+    "bunyan": "^1.4.0",
     "express": "^4.12",
     "jsonwebtoken": "^5.0.0",
     "lodash": "^3.8.0",
