--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 sudo: false
-
 language: node_js
 
 node_js: "0.12"
 
 install:
+  - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-$MONGODB_VERSION.tgz
+  - tar xfz mongodb-linux-x86_64-$MONGODB_VERSION.tgz
+  - export PATH=`pwd`/mongodb-linux-x86_64-$MONGODB_VERSION/bin:$PATH
+  - mkdir -p data/db
+  - mongod --dbpath=data/db &
+  - sleep 3
   - npm install -g mocha
   - npm install -g istanbul
   - npm install -g coveralls
@@ -12,10 +17,9 @@ install:
   - npm install
 services:
   - redis-server
-  - mongodb
-before_install:  
-  - sleep 5
+
 script:
+  - mongo --eval 'db.hostInfo()'
   - istanbul cover _mocha --report lcovonly
 after_script:
   - cat ./coverage/lcov.info | coveralls
