--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jsonwebtoken": "^5.0.0",
     "lodash": "^3.8.0",
     "socket.io": "^1.3.5",
-    "socketio-jwt": "^4.0.0"
+    "socketio-jwt": "^4.0.0",
+    "basyt-redis-client": "ytlabs/basyt-redis-client"
   },
   "devDependencies": {
     "supertest": "^0.15.0",
